🎨 Scrollbar & little fix

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,19 @@ html {
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 12px !important;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px !important;
+  background-color: #E99F59 !important;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #3A3A3A !important;
+}
+
 h1 {
   font-family: "Bebas Neue", cursive;
 }
