--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,18 @@ html{
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 12px !important;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px !important;
+    background-color: #E99F59 !important;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #3A3A3A !important;
+}
 
 $overpass : 'Overpass', sans-serif;
 $bebas : 'Bebas Neue', cursive;
